# torch-libs

./: CMakeLists.txt  main.cc
.github/workflows/: display-sha.yaml  linux-aarch64.yaml  linux.yaml  macos.yaml
cmake/: torch-libs.cmake  torch-linux-aarch64-shared.cmake  torch-linux-aarch64-static.cmake  torch-linux-x64-shared-cxxabi.cmake  torch-linux-x64-shared.cmake  torch-linux-x64-static.cmake  torch-osx-arm64-shared.cmake  torch-osx-arm64-static.cmake  torch-osx-x64-shared.cmake  torch-osx-x64-static.cmake
